--- a/Project1/CMakeLists.txt
+++ b/Project1/CMakeLists.txt
@@ -23,7 +23,7 @@ IF(${FALSE}) # LINUX!
     PROPERTIES
     LINKER_LANGUAGE CXX
   )
-ENDIF(${LINUX})
+ENDIF(${FALSE})
 
 IF(APPLE)
   set(CMAKE_CXX_COMPILER "clang++")
