--- a/Project1/CMakeLists.txt
+++ b/Project1/CMakeLists.txt
@@ -3,35 +3,13 @@ project (IOProject1)
 
 string(COMPARE EQUAL ${CMAKE_SYSTEM_NAME} "Linux" LINUX)
 
-IF(${FALSE}) # LINUX!
-#  set(CMAKE_CXX_COMPILER "clang++")
+IF(LINUX)
+  set(CMAKE_CXX_COMPILER "g++")
   set(CMAKE_BUILD_TYPE Release)
   set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG -std=c++0x -march=corei7-avx -mtune=corei7-avx -flto -funroll-loops -fpermissive -save-temps -g")
-
-  add_library(
-    ipcm_lib
-    STATIC
-    EXCLUDE_FROM_ALL
-    /home/espeholt/ipcm/msr.o
-    /home/espeholt/ipcm/pci.o
-    /home/espeholt/ipcm/cpucounters.o
-  )
-
-  set_target_properties(
-    ipcm_lib
-    PROPERTIES
-    LINKER_LANGUAGE CXX
-  )
-ENDIF(${FALSE})
-
-IF(APPLE)
-  set(CMAKE_CXX_COMPILER "clang++")
-  set(CMAKE_BUILD_TYPE Release)
-  set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
-  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")
-ENDIF(APPLE)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
+ENDIF(LINUX)
 
 add_executable(Project1 main.cpp
                         input_stream.h
