--- a/Project1/CMakeLists.txt
+++ b/Project1/CMakeLists.txt
@@ -11,6 +11,14 @@ IF(LINUX)
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
 ENDIF(LINUX)
 
+IF(APPLE)
+  set(CMAKE_CXX_COMPILER "clang++")
+  set(CMAKE_BUILD_TYPE Release)
+  set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -stdlib=libc++")
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")
+ENDIF(APPLE)
+
 add_executable(Project1 main.cpp
                         input_stream.h
                         output_stream.h
