--- a/Project2/CMakeLists.txt
+++ b/Project2/CMakeLists.txt
@@ -23,9 +23,11 @@ add_executable(Project2 main.cpp
                         dummy_stream.hpp
                         f_stream.hpp
                         mmap_stream.hpp
+                        mmap_file_stream.hpp
                         sys_stream.hpp
                         buffered_stream.hpp
                         utils.hpp
                         test.hpp
                         external_heap.hpp
-                        block.hpp)
+                        block.hpp
+                        cached_stream.hpp)
