--- a/Project2/CMakeLists.txt
+++ b/Project2/CMakeLists.txt
@@ -7,7 +7,7 @@ IF(LINUX)
   set(CMAKE_CXX_COMPILER "g++")
   set(CMAKE_BUILD_TYPE Release)
   set(CMAKE_CXX_FLAGS_RELEASE "-O3 -funroll-loops -flto -DNDEBUG -DLINUX")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall”)
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}")
 ENDIF(LINUX)
 
